# basic_project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py  models.py
app/core/: config.py  db.py
docker/: README.md
migrations/: env.py
migrations/versions/: 583c00777e7b_create_users_table.py  7ac8aa28cdce_add_user_created_at.py  8f5fae76b858_create_users_table2.py  9ae00bd0e5db_create_fruit.py  b1945aa5a5a4_final_user_create.py
